Add map component
