# swagger/swagger.json
@@ -45,6 +45,40 @@
                 }
             }
         },
+        "/api/user/likes": {
+            "get": {
+                "description": "get user likes",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get user likes",
+                "operationId": "get-user-likes",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetUserLikesResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "update user like",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update user like",
+                "operationId": "update-user-like",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/UpdateUserLikeResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user/verify": {
             "get": {
                 "description": "verify auth token from firebase",
@@ -65,6 +99,24 @@
         }
     },
     "definitions": {
+        "GetUserLikesResponse": {
+            "type": "object",
+            "required": [
+                "error",
+                "likes"
+            ],
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "likes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/database.Like"
+                    }
+                }
+            }
+        },
         "ListingsResponse": {
             "type": "object",
             "required": [
@@ -76,6 +128,17 @@
                     "items": {
                         "$ref": "#/definitions/database.Listing"
                     }
+                }
+            }
+        },
+        "UpdateUserLikeResponse": {
+            "type": "object",
+            "required": [
+                "error"
+            ],
+            "properties": {
+                "error": {
+                    "type": "string"
                 }
             }
         },
@@ -260,6 +323,21 @@
             ],
             "properties": {
                 "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "database.Like": {
+            "type": "object",
+            "required": [
+                "createdAt",
+                "listingId"
+            ],
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "listingId": {
                     "type": "string"
                 }
             }
